<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GridImageSearch</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="btn_search_text">Search</string>
    <string name="query_hint">Enter Search Term</string>
    <string name="title_activity_image_display">ImageDisplayActivity</string>
    <string name="title_settings">Settings</string>
    <string name="title_activity_image_search_filters">ImageSearchFilters</string>
    <string name="text_filter_title">Advanced search options</string>
    <string name="text_size">Image Size</string>
    <string name="text_color">Color Filter</string>
    <string name="text_image_type">Image Type</string>
    <string name="text_site">Site filter</string>
    <string name="btn_save">Save</string>
    <string name="siteHint">Please enter a website url</string>
</resources>
